--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* This ensures content doesn't hide behind header */
+main {
+  padding-top: var(--header-height, 80px);
+  min-height: calc(100vh - var(--header-height, 80px));
+}
