--- a/frontend/src/modules/blogs/blogs.css
+++ b/frontend/src/modules/blogs/blogs.css
@@ -1,10 +1,15 @@
 /* Blog Page Styles */
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
 .blog-container {
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
   color: #333;
   margin: 0 auto;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   margin-top: 150px;
 }
 
